// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vitruvius should build the expected state for a flat tree of reducers 1`] = `
{
  "other": Immutable.Map {
    "baz": "test",
  },
  "stuff": Immutable.Map {
    "foo": "test",
  },
  "things": Immutable.Map {
    "bar": "test",
  },
}
`;

exports[`vitruvius should build the expected state for a nested tree of reducers 1`] = `
{
  "nested": {
    "other": Immutable.Map {
      "baz": "test",
    },
    "things": Immutable.Map {
      "bar": "test",
    },
  },
  "stuff": Immutable.Map {
    "foo": "test",
  },
}
`;

exports[`vitruvius should handle a mix of reducers having and not having buildInitialState method 1`] = `
{
  "other": Immutable.Map {
    "baz": "test",
  },
  "stuff": Immutable.Map {
    "foo": "test",
  },
  "things": Immutable.Map {
    "bar": "test",
  },
}
`;

exports[`vitruvius should handle all reducers having buildInitialState method 1`] = `
{
  "other": Immutable.Map {
    "baz": "test",
  },
  "stuff": Immutable.Map {
    "foo": "test",
  },
  "things": Immutable.Map {
    "bar": "test",
  },
}
`;

exports[`vitruvius should handle no reducers having buildInitialState method 1`] = `{}`;

exports[`vitruvius should return an initialState that is acceptable to redux toolkit's configureStore 1`] = `
{
  "other": Immutable.Map {
    "baz": "foo",
  },
  "static": Immutable.Map {
    "static": true,
  },
  "stuff": Immutable.Map {
    "foo": "bar",
  },
  "things": Immutable.Map {
    "bar": "baz",
  },
}
`;

exports[`vitruvius should return an initialState that is acceptable to redux's createStore 1`] = `
{
  "other": Immutable.Map {
    "baz": "test",
  },
  "static": Immutable.Map {
    "static": true,
  },
  "stuff": Immutable.Map {
    "foo": "test",
  },
  "things": Immutable.Map {
    "bar": "test",
  },
}
`;
